--- a/sql_analysis.ipynb
+++ b/sql_analysis.ipynb
@@ -185,21 +185,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for row in result.fetchall():\n",
-    "    print(row._asdict())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Functionize  .. the same above process\n",
+    "# Functionize  .... the same above process\n",
     "\n",
     "def sql_command(query):\n",
     "    with engine.connect() as conn:\n",
